Correct avatar column margin on activity pages
Previously, activity directory with no sidebar had a huge gap between
the avatar and the content.

--- a/css/buddypress.less
+++ b/css/buddypress.less
@@ -234,10 +234,9 @@
 	.activity-avatar {
 		float: left; // @todo RTL
 		margin-right: @themeCompatMargin; // @todo RTL
-		width: 9%;
 	}
 
-	.activity-content { margin: 0 0 0 11%; } // @todo RTL
+	.activity-content { margin: 0 0 0 (@themeCompatMargin + 50px); } // @todo RTL
 
 	.activity-comments {
 		.clearfix();
